--- a/_posts/2026-01-01-test.md
+++ b/_posts/2026-01-01-test.md
@@ -1,17 +1,74 @@
 ---
-title: "Test"
-date: 2026-02-10
-excerpt: "Lorem ipsum"
-description: "loremipsim"
+title: "Example Blog Post with Table of Contents"
+date: 2026-01-01
+excerpt: "This is a demonstration of how to add a table of contents to your blog posts."
+description: "Learn how to add an automatic table of contents to your Jekyll posts"
+author: "0000099"
+tags: [example, jekyll, guide]
+toc:
+  - title: "Introduction"
+    url: "#introduction"
+    level: 2
+  - title: "Getting Started"
+    url: "#getting-started"
+    level: 2
+  - title: "Installation"
+    url: "#installation"
+    level: 3
+  - title: "Configuration"
+    url: "#configuration"
+    level: 3
+  - title: "Best Practices"
+    url: "#best-practices"
+    level: 2
+  - title: "Tips and Tricks"
+    url: "#tips-and-tricks"
+    level: 3
+  - title: "Conclusion"
+    url: "#conclusion"
+    level: 2
 ---
 
-<h1>{{ page.title }}</h1>
-<p>{{ page.date | date: "%B %d, %Y" }}</p>
+## Introduction
 
-Lorem ipsum
+This is an example blog post demonstrating the Table of Contents feature. The TOC is automatically generated from the `toc` array in the front matter.
 
-<footer>
-  <p>© {{ 'now' | date: '%Y' }} 0000099.xyz</p>
-  <p>This page is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nd/4.0/">Creative
-Commons Attribution-NoDerivatives 4.0 International License</a></p>
-</footer>
+When you add a `toc` section to your post's front matter, it will appear in the sidebar under "On This Page" for easy navigation.
+
+## Getting Started
+
+To use the table of contents feature, simply add a `toc` array to your post's front matter with entries for each section.
+
+### Installation
+
+Each entry in the `toc` array should have:
+- `title`: The display text for the TOC entry
+- `url`: The anchor link (should match the heading ID)
+- `level`: The heading level (2 for h2, 3 for h3, etc.)
+
+### Configuration
+
+Make sure your heading IDs match the URLs in your TOC. Kramdown automatically generates IDs from heading text, converting spaces to hyphens and lowercasing.
+
+For example:
+- `## My Section` → `id="my-section"`
+- `### Sub Section` → `id="sub-section"`
+
+## Best Practices
+
+Here are some tips for effective use of the table of contents:
+
+### Tips and Tricks
+
+- Keep heading hierarchy logical (don't skip levels, e.g., h2 → h4)
+- Use descriptive heading text that conveys the section's purpose
+- Limit TOC entries to major sections for better readability
+- Test that your anchor links work by clicking them in the sidebar
+
+## Conclusion
+
+The table of contents feature helps readers navigate longer posts and improves user experience. It's especially useful for technical articles and tutorials.
+
+---
+
+*This post is just an example. Replace it with your own content!*
