--- a/_posts/2026-01-01-test.md
+++ b/_posts/2026-01-01-test.md
@@ -1,74 +1,122 @@
 ---
-title: "Example Blog Post with Table of Contents"
+title: "Example Blog Post with Automatic Table of Contents"
 date: 2026-01-01
-excerpt: "This is a demonstration of how to add a table of contents to your blog posts."
-description: "Learn how to add an automatic table of contents to your Jekyll posts"
+excerpt: "This is a demonstration of automatic table of contents generation from post headings."
+description: "Learn how automatic table of contents works with Jekyll - no manual configuration needed!"
 author: "0000099"
 tags: [example, jekyll, guide]
-toc:
-  - title: "Introduction"
-    url: "#introduction"
-    level: 2
-  - title: "Getting Started"
-    url: "#getting-started"
-    level: 2
-  - title: "Installation"
-    url: "#installation"
-    level: 3
-  - title: "Configuration"
-    url: "#configuration"
-    level: 3
-  - title: "Best Practices"
-    url: "#best-practices"
-    level: 2
-  - title: "Tips and Tricks"
-    url: "#tips-and-tricks"
-    level: 3
-  - title: "Conclusion"
-    url: "#conclusion"
-    level: 2
 ---
 
 ## Introduction
 
-This is an example blog post demonstrating the Table of Contents feature. The TOC is automatically generated from the `toc` array in the front matter.
+This is an example blog post demonstrating the **automatic Table of Contents** feature. The TOC is automatically generated from your post's heading hierarchy.
 
-When you add a `toc` section to your post's front matter, it will appear in the sidebar under "On This Page" for easy navigation.
+Just write your content with proper headings (h2, h3, h4), and the JavaScript will automatically:
+- Generate IDs for your headings
+- Extract them into a TOC
+- Display them in the sidebar
+- Highlight which section you're currently reading (scroll spy)
+
+No manual front matter configuration needed!
 
 ## Getting Started
 
-To use the table of contents feature, simply add a `toc` array to your post's front matter with entries for each section.
+The automatic TOC generation is intelligent and handles everything for you. Just focus on writing good content with clear headings.
 
 ### Installation
 
-Each entry in the `toc` array should have:
-- `title`: The display text for the TOC entry
-- `url`: The anchor link (should match the heading ID)
-- `level`: The heading level (2 for h2, 3 for h3, etc.)
+There's nothing to install - it's built into the site automatically!
+
+The JavaScript runs on page load and:
+1. Scans the page for headings (h2, h3, h4)
+2. Generates anchor IDs if missing
+3. Creates the TOC sidebar
+4. Enables scroll spy tracking
 
 ### Configuration
 
-Make sure your heading IDs match the URLs in your TOC. Kramdown automatically generates IDs from heading text, converting spaces to hyphens and lowercasing.
+Best practices for TOC:
+- Use h2 for major sections
+- Use h3 for subsections  
+- Use h4 for sub-subsections
+- Keep heading text descriptive and concise
+- Don't skip heading levels (go h2 → h3 → h4, not h2 → h4)
 
-For example:
-- `## My Section` → `id="my-section"`
-- `### Sub Section` → `id="sub-section"`
+## Features
+
+### Automatic ID Generation
+
+If you write a heading like `## My Amazing Section`, the script automatically creates an ID like `my-amazing-section` and makes it linkable.
+
+### Scroll Spy
+
+As you scroll down the page, the TOC automatically highlights which section you're currently viewing. This helps readers know where they are in the document.
+
+### Nested Levels
+
+The TOC properly handles nested heading levels with visual indentation:
+- H2 headings are top-level
+- H3 headings are indented slightly
+- H4 headings are indented more
+
+### Mobile Friendly
+
+On smaller screens, the TOC sidebar collapses and adapts to the smaller viewport while remaining functional.
 
 ## Best Practices
 
-Here are some tips for effective use of the table of contents:
+Here are tips for effective content structure:
 
-### Tips and Tricks
+### Keep It Organized
 
-- Keep heading hierarchy logical (don't skip levels, e.g., h2 → h4)
-- Use descriptive heading text that conveys the section's purpose
-- Limit TOC entries to major sections for better readability
-- Test that your anchor links work by clicking them in the sidebar
+- Start with h2 for your intro section
+- Use h3 for subsections
+- Avoid too many heading levels (max h2-h4)
+- One h1 per page (the title)
+
+### Write Clear Headings
+
+Good headings make for a good TOC:
+- **Good**: "Installation Steps", "Configuration Options", "Troubleshooting"
+- **Avoid**: "Misc", "Other stuff", "Info"
+
+### Content Length
+
+The TOC shines with longer posts:
+- Quick articles: minimal TOC, still works fine
+- Deep dives: TOC really helps readers navigate
+- References: TOC becomes essential for usability
+
+## Advanced Tips
+
+### Creating Table-Like References
+
+You can use regular Markdown to create reference-style content:
+
+```markdown
+## API Reference
+
+### GET /users
+
+Returns a list of users.
+
+### POST /users
+
+Creates a new user.
+```
+
+### Using Markdown Features
+
+Combine Markdown features with clear heading structure:
+- **Bold text** for emphasis
+- _Italic_ for less emphasis
+- `Code` for technical terms
+- Lists for multiple items
 
 ## Conclusion
 
-The table of contents feature helps readers navigate longer posts and improves user experience. It's especially useful for technical articles and tutorials.
+The automatic TOC generation makes it simple to create well-structured, navigable content. Write your content naturally with clear headings, and let the system handle the rest!
 
 ---
 
-*This post is just an example. Replace it with your own content!*
+**Try it yourself**: Just use h2, h3, and h4 headings in your posts, and watch the TOC populate automatically in the sidebar. As you scroll, the TOC will highlight your current section.
